<resources>
    <string name="facebook_benner_ads">1453443504734328_1453470934731585</string>
    <string name="call_block_service">Call Block Service</string>
    <string name="call_block_service_bn"> কল ব্লক সার্ভিস </string>
    <string name="usage_since_1_december">Usage Since 1 december </string>
    <string name="usage_since_1_december_bn"> পহেলা ডিসেম্বর থেকে ব্যবহার </string>
    <string name="edittext_hint"><font size="25">  type your search item  </font></string>
    <string name="edittext_hint_bn"><font size="25">  সার্চ আইটেমটি টাইপ করুন  </font></string>
    <string name="apply_charge_free">Apply charge : Free</string>
    <string name="apply_charge_free_bn"> চার্জ প্রযোজ্য : বিনামূল্যে</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_sms_bn"> এসএমএস পাঠান </string>
    <string name="details">Details</string>
    <string name="details_bn"> বিস্তারিত </string>
    <string name="purchase">USSD Dial</string>
    <string name="purchase_bn"> ইউএসএসডি ডায়াল </string>
    <string name="purchase_by_sms"> SMS</string>
    <string name="purchase_by_sms_bn"> এসএমএস </string>
    <string name="package_information">Pakage Information </string>
    <string name="package_information_bn">প্যাকেজ তথ্য </string>
    <string name="package_type"> Package type </string>
    <string name="package_type_bn"> প্যাকেজ </string>
    <string name="fnf_service_bn"> এফএনএফ </string>
    <string name="package_nishchinto">Package : Nishchinto</string>
    <string name="package_nishchinto_bn"> প্যাকেজ: নিশ্চিন্ত </string>
    <string name="stop_all_service">All services</string>
    <string name="stop_all_service_bn"> সকল সার্ভিস </string>
    <string name="one_time_pack_add_ons_bn">এককালীন প্যাক  (অ্যাড-অংশ)</string>
    <string name="one_time_pack_add_ons">One Time Pack (add ons)</string>
    <string name="fnf_menu">FnF Menu</string>
    <string name="fnf_menu_bn"> এফএনএফ </string>
    <string name="check_super_fnf">Check Super FnF</string>
    <string name="check_super_fnf_bn"> সুপার এফএনএফ</string>
    <string name="add_super_fnf">Add Super FnF</string>
    <string name="add_super_fnf_bn"> সুপার এফএনএফ</string>
    <string name="missed_call_alert">Missed Call Alert</string>
    <string name="missed_call_alert_bn"> মিসড কল অ্যালার্ট </string>
    <string name="own_number">Own Number</string>
    <string name="own_number_bn"> মোবাইল নম্বর </string>
    <string name="internet_balance">Internet Balance</string>
    <string name="internet_balance_bn"> ইন্টারনেট ব্যালেন্স </string>
    <string name="emergency_balance">Emergency Balance</string>
    <string name="emergency_balance_bn"> জরুরী ব্যালান্স </string>
    <string name="balance_inquiry_prepaid">Balance Inquiry (Prepaid)</string>
    <string name="balance_inquiry_prepaid_bn">ব্যালান্স ইনকোয়ারি (প্রিপেইড)</string>
    <string name="menu">Menu</string>
    <string name="menu_bn"> মেনু </string>
    <string name="fnf_service_menu"> FnF </string>
    <string name="fnf_service_menu_bn"> এফএনএফ </string>
    <string name="delete_fnf">Delete FnF</string>
    <string name="delete_fnf_bn"> এফএনএফ </string>
    <string name="done">Done</string>
    <string name="done_bn"> সম্পন্ন </string>
    <string name="add_fnf">Add FnF</string>
    <string name="add_fnf_bn"> এফএনএফ </string>
    <string name="fnf_list">FnF List</string>
    <string name="fnf_list_bn"> এফএনএফ লিস্ট </string>
    <string name="sent_message">Send Message</string>
    <string name="sent_message_bn">বার্তা পাঠান</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_bn">বাতিল</string>
    <string name="end_date">End date</string>
    <string name="end_date_bn">শেষ তারিখ</string>
    <string name="start_date">Start Date</string>
    <string name="start_date_bn"> শুরুর তারিখ </string>
    <string name="day_7">7 days</string>
    <string name="day_7_bn">7 দিন</string>
    <string name="package_duration">Package Duration</string>
    <string name="package_duration_bn">প্যাকেজ মেয়াদ</string>
    <string name="mb_10">10</string>
    <string name="mb_10_bn">১০</string>
    <string name="unlimited">Unlimited</string>
    <string name="unlimited_bn"> সীমাহীন </string>
    <string name="gb">GB</string>
    <string name="gb_bn">গিগাবাইট</string>
    <string name="delete_super_fnf">Delete Super FnF</string>
    <string name="delete_super_fnf_bn"> সুপার এফএনএফ </string>
    <string name="usage_period">Usage  period : 12/10/2016 to 29/12/2016</string>
    <string name="usage_duration">Uses Duration : 1 days</string>
    <string name="usage_duration_bn">ব্যবহারের মেয়াদ : ১ দিন</string>
    <string name="data_size_unlimit_bn"> ডাটার পরিমাণ: সীমাহীন </string>
    <string name="recharge_info"><u>Packages &amp; Recharge</u></string>
    <string name="recharge_info_bn"><u>প্যাকেজ &amp; রিচার্জ</u></string>
    <string name="int_balance_for_payg">Int Balance (for *PAYG)</string>
    <string name="int_balance_for_payg_bn">ইন্টারনেট ব্যালেন্স (for *PAYG)</string>
    <string name="current_data_plan">Current Data Plan</string>
    <string name="current_data_plan_bn"> বর্তমান ডেটা প্ল্যান </string>
    <string name="vat" formatted="false">15% VAT, 5% SD &amp; 1% Surcharge applicable.</string>
    <string name="vat_bn" formatted="false">১৫% ভ্যাট, ৫% এসডি &amp; ১% সারচার্জ প্রযোজ্য |</string>
    <string name="package_size">Package Size : 100 Mb</string>
    <string name="package_size_bn"> প্যাকেজ ফাইলের আকার: ১০০ মেগাবাইট </string>
    <string name="usage_periodd"> Usage Period : </string>
    <string name="usage_periodd_bn"> ব্যবহারের সময়কাল : </string>
    <string name="data_size_unlimit"> Data Size: Unlimit. </string>
    <string name="time_limit"> Time Limit : </string>
    <string name="time_limit_bn"> মেয়াদ : </string>
    <string name="data_size"> Data Size:  </string>
    <string name="data_size_bn">  ডাটার পরিমাণ:   </string>
    <string name="setup_alert"> Please give your end date of setup plan.</string>
    <string name="setup_alert_bn"> আপনার সেটআপ পরিকল্পনার শেষ তারিখ ইনপুট দিবেন</string>
    <string name="min_press_2_chars">Minimum Enter First 2 Characters of search item</string>
    <string name="min_press_2_chars_bn">নূন্যতম লিখুন প্রথম ২ সার্চ আইটেমের অক্ষর</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_bn"> সেটিংস </string>
    <string name="check_on_web">Check on web</string>
    <string name="check_on_web_bn"> ওয়েবে চেক করুন </string>
    <string name="app_data_usage"> App Data Usage </string>
    <string name="app_data_usage_bn"> অ্যাপ কর্তৃক ডেটা ব্যবহার </string>
    <string name="packge"> Package</string>
    <string name="packge_bn"> প্যাকেজ </string>
    <string name="day"> day </string>
    <string name="day_bn"> দিন </string>
    <string name="days"> days </string>
    <string name="days_bn"> দিন </string>
    <string name="g_internet_plan"><u> 3G Internet Plan</u></string>
    <string name="g_internet_plan_bn"><u> 3G ইন্টারনেট প্ল্যান </u></string>
    <string name="migration"><u>Prepaid | Postpaid</u></string>
    <string name="migration_bn"> প্রি-পেইড | পোস্টপেইড </string>
    <string name="mb">MB</string>
    <string name="mb_bn"> মেগাবাইট </string>
    <string name="tv_2g">2G Plan</string>
    <string name="tv_3g">2G Plan</string>
    <string name="tv_2g_bn">2G প্ল্যান </string>
    <string name="tv_3g_bn">3G প্ল্যান </string>
    <string name="app_name_here">App Name Here</string>
    <string name="app_name_here_bn"> অ্যাপ নাম এখানে </string>
    <string name="delete">Delete</string>
    <string name="delete_bn"> মুছে ফেলুন </string>
    <string name="tv_dotdotdot">---</string>
    <string name="btn_text_get">Get</string>
    <string name="btn_text_get_bn"> দেখুন </string>
    <string name="btn_check">Check</string>
    <string name="btn_check_bn"> চেক করুন</string>
    <string name="btn_active">Active</string>
    <string name="btn_active_bn"> চালু করুন </string>
    <string name="btn_deactive">Deactive</string>
    <string name="btn_deactive_bn"> বন্ধ করুন </string>
    <string name="btn_menu">Menu</string>
    <string name="btn_menu_bn"> মেনু </string>
    <string name="btn_dial">Dial</string>
    <string name="btn_dial_bn"> ডায়াল </string>
    <string name="btn_sms">SMS</string>
    <string name="btn_sms_bn"> এসএমএস </string>
    <string name="btn_start">Start</string>
    <string name="btn_start_bn"> চালু করুন </string>
    <string name="btn_stop">Stop</string>
    <string name="btn_stop_bn"> বন্ধ করুন </string>
    <string name="btn_about">About</string>
    <string name="btn_about_bn"> সম্পর্কে </string>
    <string name="btn_add">Add</string>
    <string name="btn_add_bn"> যোগ করুন  </string>
    <string name="btn_remove">Remove</string>
    <string name="btn_remove_bn"> মুছে ফেলুন </string>
    <string name="btn_ok">OK</string>
    <string name="btn_ok_bn"> ঠিক আছে </string>
    <string name="search_here">search here</string>
    <string name="search_here_bn"> এখানে অনুসন্ধান করুন </string>
    <string name="btn_activate">Activate</string>
    <string name="btn_activate_bn"> সক্রিয় করুন </string>
    <string name="btn_deactivate">Dectivate</string>
    <string name="btn_deactivate_bn"> নিষ্ক্রিয় করুন </string>
    <string name="volume">Volume: </string>
    <string name="volume_bn"> পরিমাণ: </string>
    <string name="call_rate">Call Rate :</string>
    <string name="call_rate_bn">কল রেট :</string>
    <string name="change_fnf">FnF</string>
    <string name="change_fnf_bn"> এফএনএফ </string>
    <string name="apply_charge">Apply charge : </string>
    <string name="apply_charge_bn">চার্জ প্রযোজ্য : </string>
    <string name="auto_renew">Auto Renew</string>
    <string name="auto_renew_bn">অটো-রিনিউ</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="package_migration">Package Migration</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="fnf_service">FnF </string>
    <string name="music">Music </string>
    <string name="package_introduce">Package Introduce </string>
    <string name="no">No </string>
    <string name="no_bn">না </string>
    <string name="agree">Agree </string>
    <string name="agree_bn"> ঠিক আছে </string>
    <string name="prepaid_bn">প্রিপেইড</string>
    <string name="postpaid_bn">পোস্টপেইড</string>
    <string name="package_migration_bn">প্যাকেজ মাইগ্রেশন</string>
    <string name="miscellaneous_bn">বিবিধ</string>
    <string name="music_bn"> মিউজিক </string>
    <string name="package_introduce_bn">প্যাকেজ পরিচিতি </string>
    <string name="english">English</string>
    <string name="bangla"> বাংলা </string>
    <string name="settings_title">Settings</string>
    <string name="settings_title_bn"> সেটিংস </string>
    <string name="select_language">Select Language</string>
    <string name="select_language_bn"> ভাষা নির্বাচন করুন </string>
    <string name="tv_settings">Settings</string>
    <string name="tv_settings_bn"> সেটিংস </string>
    <string name="backButton">Back</string>
    <string name="backButton_bn"> পিছনে </string>
    <string name="about">About</string>
    <string name="about_bn">সম্পর্কে</string>
    <string name="aboutT">About</string>
    <string name="aboutT_bn"> আমাদের সম্পর্কে </string>
    <string name="app_name">BD Data Plan</string>
    <string name="app_name_bn"> বিডি ডাটা প্ল্যান</string>
    <string name="versionName">version : 5.1.3</string>
    <string name="home">Home</string>
    <string name="tv_share">Share</string>
    <string name="dataSize">Data Size</string>
    <string name="data_plan">ADD DATA PLAN</string>
    <string name="grameenphone">Grameenphone</string>
    <string name="gp_internet_1gb">GP Internet</string>
    <string name="trial_plan_30_days">Trial Plan (30 Days)</string>
    <string name="bl">Banglalink</string>
    <string name="robi">Robi</string>
    <string name="airtel">Airtel</string>
    <string name="teletalk">Teletalk</string>
</resources>