<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
        <item
            android:id="@+id/grameenphone"
            android:icon="@drawable/icon_gp"
            android:title="@string/grameenphone" />
        <item
            android:id="@+id/banglalink"
            android:icon="@drawable/icon_bl"
            android:title="@string/bl" />
        <item
            android:id="@+id/airtel"
            android:icon="@drawable/icon_airtel"
            android:title="@string/airtel" />
        <item
            android:id="@+id/teletalk"
            android:icon="@drawable/icon_teletalk"
            android:title="@string/teletalk" />
        <item
            android:id="@+id/robi"
            android:icon="@drawable/icon_robi"
            android:title="@string/robi" />
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/setting"
            android:icon="@drawable/settings_100"
            android:title="@string/tv_settings" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/knowledge_sharing_96"
            android:title="@string/tv_share" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about_us_male_96"
            android:title="@string/about" />
    </group>
    <!--<item android:title="Sub items">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/share"-->
                <!--android:icon="@drawable/share_96_2"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/about"-->
                <!--android:icon="@drawable/about_us_male_96"-->
                <!--android:title="About" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
