<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_vertical"
        android:background="@color/gp_button_color_default"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/gp_internet_1gb"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_phone_numner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:text="@string/action_settings"/>

    <EditText
        android:id="@+id/editTextSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:text="@string/action_settings"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/btn_send2"
            style="@style/ButtonStyleGP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/sent_message"
            android:textColor="#fff"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>