<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:background="@drawable/cloud_music_icon_175"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/musicTitle"
                        style="@style/UsefulServicesTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trial_plan_30_days"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/charge"
                        style="@style/UsefulServicesTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/apply_charge_free"
                        android:textSize="12sp"
                        android:textStyle="italic"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dial"
                    style="@style/ButtonStyleGP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_dial"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/sms"
                    style="@style/ButtonStyleGP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_sms"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/stop"
                    style="@style/ButtonStyleGP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_stop"/>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <!--<android.support.v7.widget.CardView-->
        <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--card_view:cardCornerRadius="5dp">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/native_ad_container1"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"/>-->

    <!--</android.support.v7.widget.CardView>-->

</LinearLayout>